Ajout de l'annotation @Controller